@@ -1,5 +1,12 @@
 2012-11-03  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Frameworks/StepTalk/STConversation.h
+	    (-conversationWithContext:language:):
+	* Frameworks/StepTalk/STConversation.m
+	    (-conversationWithContext:language:):
+	Implement method which is advertised as replacement for the
+	deprecated method -conversationWithEnvironment:language:.
+
 	* Frameworks/StepTalk/STConversation.m (-runScriptFromString:,
 	-conversationWithEnvironment:language:, -initWithEnvironment:language:,
 	-environment):
